--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,8 @@ body {
     font-size: 1rem;
     color:#445361;
     position: relative;
-    left: -0.5em;
+    left: -0.3em;
+top: 1em;
 }
 
 .btn--blue {
